# deep-research-agent

./: .gitignore  README.md  docker-compose.yml  env example  grafana_dashboard.json  main.py  otel-collector-config.yaml  prometheus.yml  pyproject.toml
api/: main.py
data/personas/: persona_alpha.json  persona_beta.json  persona_gamma.json
docs/: architecture.md  prompt_design.md  runbook.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  ConnectionGraph.jsx
scripts/: evaluate_personas.py  run_agent.py
src/deep_research_agent/: __init__.py
src/deep_research_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/deep_research_agent/agents/langgraph/: __init__.py  research_graph.py
src/deep_research_agent/agents/nodes/: __init__.py  base.py  extraction_node.py  planner_node.py  reporting_node.py  search_node.py  validation_node.py
src/deep_research_agent/analysis/: connection_graph.py  entity_resolution.py  fact_validator.py  risk_scoring.py
src/deep_research_agent/config/: settings.py
src/deep_research_agent/core/: __init__.py  errors.py  interfaces.py  orchestrator.py  state.py
src/deep_research_agent/llm_providers/: __init__.py  factory.py  gemini_client.py  ollama_client.py  openai_client.py
src/deep_research_agent/observability/: metrics.py  openinference.py  prometheus_metrics.py
src/deep_research_agent/reports/: report_builder.py
src/deep_research_agent/reports/templates/: risk_report.md.j2  (+1 more)
src/deep_research_agent/search/: __init__.py  factory.py  gemini_websearch.py  openai_websearch.py  query_planner.py  serp_client.py  tavily_client.py  web_scraper.py
src/deep_research_agent/utils/: logging.py  persistence.py  rate_limiter.py  retry.py  state_helpers.py  tracing.py
