[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Autonomous deep research and risk assessment agent"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [
  { name = "Your Name", email = "syedalizamin88@gmail.com" }
]


dependencies = [
  "langgraph>=0.1.8",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.1",
  "pydantic-settings>=2.2.1",
  "structlog>=24.1.0",
  "python-dotenv>=1.0.1",
  "tenacity>=8.2.3",
  "networkx>=3.3",
  "orjson>=3.10.0",
  "jinja2>=3.1.3",
  "numpy>=1.26.4",
  "colorama>=0.4.6",
  "openai>=1.12.0",
  "google-genai>=0.2.0",
  "google-search-results>=2.4.2",
  "tavily-python>=0.3.2",
  "beautifulsoup4>=4.12.3",
  "ddgs>=1.0.0",
]


[project.optional-dependencies]
openai = [
  "openai>=1.12.0",
]
gemini = [
  "google-generativeai>=0.5.3",
]
llama = [
  "llama-cpp-python>=0.2.68",
]
tavily = [
  "tavily-python>=0.3.2",
]
serp = [
  "google-search-results>=2.4.2",
]
observability = [
  "opentelemetry-api>=1.23.0",
  "opentelemetry-sdk>=1.23.0",
  "opentelemetry-exporter-otlp>=1.23.0",
]
dev = [
  "pytest>=8.1.1",
  "pytest-asyncio>=0.23.5",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.9.0",
  "pre-commit>=3.7.0",
  "respx>=0.20.2"
]

[tool.uv]
package = true

[tool.uv.sources]
"deep-research-agent" = { path = "src" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q --strict-markers --strict-config"

[tool.coverage.run]
source = ["deep_research_agent"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = true
